[package]
name = "ros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.9"
x86_64 = "0.15"
uart_16550 = "0.3"
pic8259 = "0.11.0"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300 # seconds


[[test]]
name = "stack_overflow"
harness = false
